<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical" 
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">

    
    <!-- 最初に下部に置きたいボタンを含むレイアウトを配置 -->
	<LinearLayout 
		android:id="@+id/linearLayout1" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:layout_alignParentBottom="true" 
		    android:orientation="vertical" >


		<Button
		    android:id="@+id/Button_Mail"
		    android:layout_width="match_parent"
		    android:layout_height="35dp"
		    android:gravity="left|center_vertical"
		    android:text="Button"
		    android:ellipsize="end"
		    android:textSize="13sp" />

		<Button
		    android:id="@+id/Button_Phone"
		    android:layout_width="match_parent"
		    android:layout_height="35dp"
		    android:gravity="left|center_vertical"
		    android:text="Button"
		    android:textSize="13sp" />

	</LinearLayout>   
	
<ScrollView 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_above="@id/linearLayout1"
>
	
    <LinearLayout 
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:orientation="vertical">
<!-- 未申請 -->        
        <TextView
            android:id="@+id/textViewNoApply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/certreq_noapply_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />			
<!-- 未承認 -->             
	<TextView
            android:id="@+id/textViewNoApproval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/certreq_noapproval_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />			
<!-- 通知先メールアドレス -->             
	<TextView
            android:id="@+id/textViewMailAddr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/certreq_mailaddress_title"
            android:textStyle="italic"
             />
        <EditText
			    android:id="@+id/EditAddress01"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
				android:inputType="text"
			    android:text=""

			    android:width="220dp" >

			</EditText>
<!-- 承認者へのメモ -->        
        	<TextView
            android:id="@+id/textViewMemo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/certreq_memo_title"
            android:textStyle="italic"
             />
        <EditText
			    android:id="@+id/EditMemo"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"

			    android:text=""

			    android:width="220dp" >

			</EditText>
        
      	<FrameLayout
            android:background="#222222"
            android:layout_width="fill_parent"
            android:layout_height="2dp" />		
<!-- 「申請する」ボタン -->
	 <Button android:text="@string/certreq_apply_button" android:id="@+id/ButtonApply" 
			android:layout_width="wrap_content" android:layout_height="wrap_content">
		</Button>
		
<!-- 「申請変更」ボタン -->	
	 <Button android:text="@string/certreq_applycng_button" android:id="@+id/ButtonApplyChange" 
			android:layout_width="wrap_content" android:layout_height="wrap_content">
		</Button>
<!-- 「申請取り下げ」ボタン -->	
	 <Button android:text="@string/certreq_applyback_button" android:id="@+id/ButtonApplyBack" 
			android:layout_width="wrap_content" android:layout_height="wrap_content">
		</Button>
		
	 <TextView android:text="" 
			android:id="@+id/apply_set_err" android:layout_width="wrap_content" 
			android:layout_height="wrap_content">
			</TextView>
			
		
    </LinearLayout>
</ScrollView>
</RelativeLayout>