<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical" 
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  
      <LinearLayout 
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:orientation="vertical"
        >  
 <!-- MDMチェックイン -->    
      <TextView android:text="@string/mdm_header_title" android:id="@+id/MDMTitle" 
	android:layout_width="wrap_content" android:layout_height="wrap_content" 
	android:layout_gravity="center|top" android:textSize="20sp">
	</TextView>
    <LinearLayout		    
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" >

		  <Button android:text="Start DevicePolicy Control" android:id="@+id/ButtonStartpasscode" 
			android:layout_width="wrap_content" android:layout_height="wrap_content">
			</Button>
			
			<Button android:text="End DevicePolicy Control" android:id="@+id/ButtonEndpasscode" 
			android:layout_width="wrap_content" android:layout_height="wrap_content">
			</Button>
			 <!-- 「当製品をアンインストるするには～」 -->  
			<TextView android:text="@string/mdm_devicepolicy_msg1" 
			android:id="@+id/textView_deviceadmin01" 
			android:layout_width="wrap_content" android:layout_height="wrap_content">
			</TextView>


		</LinearLayout>
		
            <FrameLayout
            android:id="@+id/Fmcheck01"
            android:background="#222222"
            android:layout_width="fill_parent"
            android:layout_height="1dp" />

 <!-- チェックイン --> 
      	 <Button android:text="@string/mdm_checkin_button" android:id="@+id/ButtonCheckin" 
			android:layout_width="wrap_content" android:layout_height="wrap_content">
		</Button>
 <!-- MDM開始 -->		
      	  <Button android:text="@string/mdm_run_button" android:id="@+id/ButtonMDMStart" 
			android:layout_width="wrap_content" android:layout_height="wrap_content">
		</Button>
			</LinearLayout>
   </RelativeLayout>  