<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/rootViewContent"
                android:background="@drawable/left_panel_background" >

		<TextView
				android:id="@+id/tvBack"
				android:layout_width="wrap_content"
				android:layout_height="@dimen/height_btn_back_left_side_tablet"
				android:layout_marginTop="@dimen/margin_icon_setting"
				android:layout_marginRight="@dimen/margin_icon_setting"
				android:layout_alignParentLeft="true"
				android:drawableLeft="@drawable/ic_back_white"
				android:gravity="center_vertical"
				android:clickable="true"
				android:text="@string/back"
				android:visibility="gone"
				android:textSize="@dimen/tv_back_left_side"
				android:textColor="@drawable/text_selector"/>

		<LinearLayout
				android:id="@+id/rl_left_side_guide_input"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="vertical"
				android:layout_marginLeft="@dimen/margin_left_side"
				android:layout_marginRight="@dimen/margin_left_side"
				android:layout_marginTop="@dimen/margin_top_content_left_side_input_tablet"
				android:layout_marginBottom="@dimen/margin_bottom_content_left_side_input_tablet">
			<TextView
					android:id="@+id/tv_host_name_and_port_number"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/input_host_name_and_port_number"
					android:textSize="@dimen/tv_content_left_side"
					android:textColor="@color/color_desc_menu_70"
					android:gravity="center_horizontal"
					android:lineSpacingMultiplier="1.5"
					/>
			<android.support.v4.widget.Space
					android:layout_width="match_parent"
					android:layout_height="0dp"
					android:layout_weight="1"/>
			<TextView
					android:id="@+id/tv_download_ca_certificate"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/download_ca_certificate"
					android:textSize="@dimen/tv_content_left_side"
					android:textColor="@color/color_desc_menu_70"
					android:gravity="center_horizontal"
					android:lineSpacingMultiplier="1.5"
					/>
			<android.support.v4.widget.Space
					android:layout_width="match_parent"
					android:layout_height="0dp"
					android:layout_weight="1"/>
			<TextView
					android:id="@+id/tv_select_store"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/input_select_store"
					android:textSize="@dimen/tv_content_left_side"
					android:textColor="@color/color_desc_menu_70"
					android:gravity="center_horizontal"
					android:lineSpacingMultiplier="1.5"
					/>
			<android.support.v4.widget.Space
					android:layout_width="match_parent"
					android:layout_height="0dp"
					android:layout_weight="1"/>
			<TextView
					android:id="@+id/tv_input_id_and_password"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/input_user_id_password"
					android:layout_centerInParent="true"
					android:gravity="center_horizontal"
					android:textSize="@dimen/tv_content_left_side"
					android:textColor="@color/color_desc_menu_70"
					android:lineSpacingMultiplier="1.5"
					/>
			<android.support.v4.widget.Space
					android:layout_width="match_parent"
					android:layout_height="0dp"
					android:layout_weight="1"/>
			<TextView
					android:id="@+id/tv_input_email"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/input_email"
					android:textSize="@dimen/tv_content_left_side"
					android:textColor="@color/color_desc_menu_70"
					android:gravity="center_horizontal"
					android:lineSpacingMultiplier="1.5"
					/>
			<android.support.v4.widget.Space
					android:layout_width="match_parent"
					android:layout_height="0dp"
					android:layout_weight="1"/>
			<TextView
					android:id="@+id/tv_input_reason"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/reason_for_apply"
					android:textSize="@dimen/tv_content_left_side"
					android:textColor="@color/color_desc_menu_70"
					android:gravity="center_horizontal"
					android:lineSpacingMultiplier="1.5"
					/>
			<android.support.v4.widget.Space
					android:layout_width="match_parent"
					android:layout_height="0dp"
					android:layout_weight="1"/>
			<TextView
					android:id="@+id/tv_confirm_input"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/confirm_content"
					android:textSize="@dimen/tv_content_left_side"
					android:textColor="@color/color_desc_menu_70"
					android:gravity="center_horizontal"
					android:lineSpacingMultiplier="1.5"
					/>
			<android.support.v4.widget.Space
					android:layout_width="match_parent"
					android:layout_height="0dp"
					android:layout_weight="1"/>
		</LinearLayout>
</RelativeLayout>